added in new colums to model, new html

--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Let's Lift</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -37,6 +37,10 @@
           <div class="form-group">
             <label for="exerciseOne">Name of First Exercise</label>
             <input type="text" class="form-control" id="exercise-oneA" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="exerciseOneWeight">Weight</label>
+            <input type="number" class="form-control" id="exercise-oneA-weight" placeholder="pounds">
           </div>
           <div class="form-group">
             <label for="exerciseOneSets">Number of Sets</label>
