added div to show current workouts, not reloading correctly

--- a/public/members.html
+++ b/public/members.html
@@ -19,10 +19,18 @@
     </div>
   </div>
 </nav>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2>Welcome <span class="member-id"></span>. <span class="member-name"></span></h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h2>Pick a previously entered workout</h2>
+        <h3><span id="workoutA"></span></h3>
     </div>
   </div>
 
