--- a/public/members.html
+++ b/public/members.html
@@ -28,8 +28,11 @@
   </div>
 
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h2>Pick a previously entered workout</h2>
+    <div class="col-md-3">
+      <button id="showWorkouts">Show Available Workouts</button>
+    </div>
+    <div class="col-md-6">
+      <h2>Pick a workout</h2>
         <h3><span id="workoutA"></span></h3>
     </div>
   </div>
