getting correct workout before new info entered

--- a/public/members.html
+++ b/public/members.html
@@ -39,7 +39,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <h2>Enter a Workout (Maximum of 2)</h2>
+      <h2>Enter Workout A (Maximum of 5 Different Workouts)</h2>
         <form class="enterWorkoutA">
           <div class="form-group">
             <label for="workoutNameA">Name of Workout A</label>
