--- a/public/members.html
+++ b/public/members.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-6">
       <h2>Pick a workout</h2>
-        <h3><span id="workoutA"></span></h3>
+        <h3><span class="selectedWorkout" id="workoutA"></span></h3>
     </div>
   </div>
 
@@ -66,6 +66,29 @@
         </form>
     </div>
   </div>
+
+  <div id="currentWorkout"> <!--This portion is the the div containing the actual workout-->
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2><span id="workoutA"></span></h2> <!-- Title of workout, specific now, but needs to 
+        be made general when more than one workout is available-->
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h3><span id="exerciseOneofA"></span></h3><!--I think the next divs need to be display: inline-block
+        inline: block adds the line break-->
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 rowOfSets"></div>
+    </div>
+
+  </div>
+
 </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
