--- a/public/members.html
+++ b/public/members.html
@@ -21,6 +21,7 @@
 </nav>
 
 <div class="container-fluid">
+  
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h2>Welcome <span class="member-id"></span>. <span class="member-name"></span></h2>
@@ -71,20 +72,22 @@
 
     <div class="row">
       <div class="col-md-6">
-        <h2><span id="workoutA"></span></h2> <!-- Title of workout, specific now, but needs to 
+        <h3><span id="workoutA"></span></h3> <!-- Title of workout, specific now, but needs to 
         be made general when more than one workout is available-->
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-6">
-        <h3><span id="exerciseOneofA"></span></h3><!--I think the next divs need to be display: inline-block
-        inline: block adds the line break-->
+      <div class="col-md-12">
+        <h3><span id="weightOneofA"></span></h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-12 rowOfSets"></div>
+      <div class="col-md-6">
+        <h3><span id="exerciseOneofA"></span></h3> <!--I think the next divs need to be display: inline-block
+          inline: block adds the line break-->
+      </div>
     </div>
 
   </div>
