--- a/public/members.html
+++ b/public/members.html
@@ -90,6 +90,18 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <h3><span id="setsOneofA"></span></h3>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h3><span id="repsOneofA"></span></h3>
+      </div>
+    </div>
+
   </div>
 
 </div>
