adding workout buttons - in progress

--- a/public/members.html
+++ b/public/members.html
@@ -72,33 +72,23 @@
 
     <div class="row">
       <div class="col-md-6">
-        <h3><span id="workoutA"></span></h3> <!-- Title of workout, specific now, but needs to 
+        <h3>Title of Current Workout: <span id="workoutA"></span></h3> <!-- Title of workout, specific now, but needs to 
         be made general when more than one workout is available-->
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-12">
-        <h3><span id="weightOneofA"></span></h3>
-      </div>
-    </div>
-
-    <div class="row">
       <div class="col-md-6">
-        <h3><span id="exerciseOneofA"></span></h3> <!--I think the next divs need to be display: inline-block
-          inline: block adds the line break-->
+        <h3><span id="exerciseOneofA"></span></h3>
+      </div>
+      <div class="col-md-6">
+          <h3><span id="setsOneofA"></span>x<span id="repsOneofA"></span>  <span id="weightOneofA"></span>lb</h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-12">
-        <h3><span id="setsOneofA"></span></h3>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <h3><span id="repsOneofA"></span></h3>
+      <div class="col-md-12" id="setsRepsButtons">
+        
       </div>
     </div>
 
