--- a/public/members.html
+++ b/public/members.html
@@ -78,11 +78,11 @@
     </div>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-3">
         <h3><span id="exerciseOneofA"></span></h3>
       </div>
-      <div class="col-md-6">
-          <h3><span id="setsOneofA"></span>x<span id="repsOneofA"></span>  <span id="weightOneofA"></span>lb</h3>
+      <div class="col-md-3 col-md-offset-3">
+          <h3><span id="setsOneofA"></span><span id="repsOneofA"></span><span id="weightOneofA"></span></h3>
       </div>
     </div>
 
@@ -90,6 +90,13 @@
       <div class="col-md-12" id="setsRepsButtons">
         
       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h3><span id="timerDisplay"></span></h3>
+      </div>
+
     </div>
 
   </div>
