--- a/public/members.html
+++ b/public/members.html
@@ -110,7 +110,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3><span id="timerDisplayExOne"></span></h3>
+        <h3><span id="timerDisplay"></span></h3>
       </div>
     </div>
 
@@ -131,7 +131,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3><span id="timerDisplayExTwo"></span></h3>
+        <h3><span id="timerDisplay"></span></h3>
       </div>
     </div>
 
