added fixed footer to contain count up timer

--- a/public/members.html
+++ b/public/members.html
@@ -109,12 +109,6 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12">
-        <h3><span id="timerDisplay"></span></h3>
-      </div>
-    </div>
-
-    <div class="row">
       <div class="col-md-3">
         <h3><span id="exerciseTwoofA"></span></h3>
       </div>
@@ -129,15 +123,14 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <h3><span id="timerDisplay"></span></h3>
-      </div>
-    </div>
-
   </div>
 
 </div>
+
+<div class="footer">
+  <h3><span id="timerDisplay"></span></h3>
+</div>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
