added available workout placeholders in html

--- a/public/members.html
+++ b/public/members.html
@@ -35,6 +35,10 @@
     <div class="col-md-6">
       <h2>Pick a workout</h2>
         <h3><span class="selectedWorkout" id="workoutA"></span></h3>
+        <h3><span class="selectedWorkout" id="workoutB"></span></h3>
+        <h3><span class="selectedWorkout" id="workoutC"></span></h3>
+        <h3><span class="selectedWorkout" id="workoutD"></span></h3>
+        <h3><span class="selectedWorkout" id="workoutE"></span></h3>
     </div>
   </div>
 
