--- a/public/members.html
+++ b/public/members.html
@@ -123,7 +123,12 @@
 
     <div class="row">
       <div class="col-md-12" id="setsRepsButtonsExTwo">
-        
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Spacer row to push up last exercise buttons</h1>
       </div>
     </div>
 
