--- a/public/members.html
+++ b/public/members.html
@@ -23,28 +23,28 @@
   <div class="container-fluid">
     
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6">
         <h2>Welcome <span class="member-id"></span>. <span class="member-name"></span></h2>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="workoutRow">
       <div class="col-md-3">
         <button id="showWorkouts">Show Available Workouts</button>
       </div>
       <div class="col-md-6">
-        <h2>Pick a workout</h2>
+        <h2>Click on a previously entered workout</h2>
           <div id="availableWorkouts"></div>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="enterRowHeading">
       <div class="col-md-6">
-        <h3 id="pickWorkout">Or click here to enter a new workout</h3>
+        <h3 id="enterWorkout">Or, click here to enter a new workout</h3>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="enterRow">
       <div class="col-md-6" id="workoutEnterForm">
       </div>
     </div>
@@ -54,7 +54,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h3>Title of Current Workout: <span id="workoutA"></span></h3> <!-- Title of workout, specific now, but needs to 
+          <h3>Title of Current Workout: <span id="workout"></span></h3> <!-- Title of workout, specific now, but needs to 
           be made general when more than one workout is available-->
         </div>
       </div>
