--- a/public/members.html
+++ b/public/members.html
@@ -48,6 +48,42 @@
       <div class="col-md-6" id="workoutEnterForm">
       </div>
     </div>
+<!-- Be ready to delete this following form, it must be put in the members.js file, so
+can be written in the DOM as needed. Want to get it in there, BEFORE I start changing variables
+names to more generic.  Right now it only can put in the first exercise of the first workout, A.-->
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Maximum of 5 Different Workouts</h2>
+     
+        <form class='enterWorkout'>
+          <fieldset>
+            <legend>Enter Workout</legend>
+              <div class='form-group'>
+                <label for='workout-nameA'>Name of Workout</label>
+                    <input type='text' class='form-control' id='workout-nameA' placeholder=''>
+              </div>
+              <div class='form-group'>
+                <label for='exercise-OneA'>Name of First Exercise</label>
+                  <input type='text' class='form-control' id='exercise-OneA' placeholder=''>
+              </div>
+              <div class='form-group'>
+                <label for='exercise-OneA-weight'>Weight</label>
+                  <input type='number' class='form-control' id='exercise-OneA-weight' placeholder='pounds'>
+              </div>
+              <div class='form-group'>
+                <label for='exercise-OneA-sets'>Number of Sets</label>
+                  <input type='number' class='form-control' id='exercise-OneA-sets' placeholder=''>
+              </div>
+              <div class='form-group'>
+                <label for='exercise-OneA-reps'>Number of Reps</label>
+                  <input type='number' class='form-control' id='exercise-OneA-reps' placeholder=''>
+              </div>
+            <button type='submit' class='btn btn-default'>Submit</button>
+          </fieldset>
+        </form>
+
+      </div>
+    </div>
     
 
     <div id="currentWorkout"> <!--This portion is the the div containing the actual workout-->
