finally fixed writing to db from form written into DOM from js

--- a/public/members.html
+++ b/public/members.html
@@ -44,16 +44,20 @@
       </div>
     </div>
 
-    <div class="row" id="enterWorkoutNameRow">
+    <!-- <div class="row" id="enterWorkoutNameRow">
       <div class="col-md-6" id="workoutNameEnterForm">
-        <h2>Maximum of 5 Different Workouts</h2>
-        <form class='enterWorkoutName'>
-          <div class='form-group'>
+          <h2>Maximum of 5 Different Workouts</h2>
+          <form class='enterWorkoutName'>
+            <div class='form-group'>
               <label for='workout-nameA'>Name of Workout</label>
-              <input type='text' class='form-control' id='workout-nameA' placeholder=''>
-          </div>
-          <button type='submit' class='btn btn-default'>Submit</button>
-        </form>
+                <input type='text' class='form-control' id='workout-nameA' placeholder=''>
+            </div>
+            <button type='submit' class='btn btn-default'>Submit</button>
+          </form>
+      </div>
+    </div> -->
+    <div class="row">
+      <div class="col-md-6" id="entryForm">
       </div>
     </div>
 <!-- Be ready to delete this following form, it must be put in the members.js file, so
@@ -61,7 +65,6 @@ can be written in the DOM as needed. Want to get it in there, BEFORE I start cha
 names to more generic.  Right now it only can put in the first exercise of the first workout, A.-->
     <div class="row">
       <div class="col-md-6" id="exerciseEnterForm">
-        
         <form class='enterWorkoutExercises'>
           <fieldset>
             <legend>Enter Exercises in  Workout</legend>
