--- a/public/members.html
+++ b/public/members.html
@@ -32,8 +32,8 @@
       <div class="col-md-3">
         <button id="showWorkouts">Show Available Workouts</button>
       </div>
-      <div class="col-md-6">
-        <h2>Click on a previously entered workout</h2>
+      <div class="col-md-9">
+        <h2>Click on a previously entered workout name to workout.</h2>
           <div id="availableWorkouts"></div>
       </div>
     </div>
