--- a/public/members.html
+++ b/public/members.html
@@ -13,9 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">
-          Logout
-        </a>
+        <a class="navbar-brand" href="/logout">Logout</a>
       </div>
     </div>
   </nav>
