--- a/public/members.html
+++ b/public/members.html
@@ -61,11 +61,12 @@
 
       <div class="row">
         <div class="col-md-6">
-          <h3>Title of Current Workout: <span id="workout"></span></h3> <!-- Title of workout, specific now, but needs to 
-          be made general when more than one workout is available-->
+          <h3>Title of Current Workout: <span id="workout"></span></h3>
         </div>
       </div>
 
+      <div id="exercisesInfoButtons"></div>
+      <!-- this is going to be removed - replaced with rewriting DOM in js file-->
       <div class="row">
         <div class="col-md-3">
           <h3><span id="exerciseOneofA"></span></h3>
@@ -77,7 +78,6 @@
 
       <div class="row">
         <div class="col-md-12" id="setsRepsButtonsExOne">
-          
         </div>
       </div>
 
@@ -94,6 +94,7 @@
         <div class="col-md-12" id="setsRepsButtonsExTwo">
         </div>
       </div>
+      <!-- to here -->
 
     </div>
 
