adding .show and .hide as needed

--- a/public/members.html
+++ b/public/members.html
@@ -46,10 +46,10 @@
       <div class="col-md-6" id="entryForm">
       </div>
     </div>
-    <!-- Right now it only can put in the first exercise of the first workout, A.-->
+    <!-- Right now it only can put in the first exercise of the first workout, A.
     <div class="row">
       <h3 id="enterExercises">Click here to enter an exercise</h3>
-    </div>
+    </div> -->
     
     <div class="row">
       <div class="col-md-6" id="exerciseEntryForm">
