--- a/public/members.html
+++ b/public/members.html
@@ -46,13 +46,15 @@
       <div class="col-md-6" id="entryForm">
       </div>
     </div>
-    <!-- Right now it only can put in the first exercise of the first workout, A.
-    <div class="row">
-      <h3 id="enterExercises">Click here to enter an exercise</h3>
-    </div> -->
     
     <div class="row">
       <div class="col-md-6" id="exerciseEntryForm">
+      </div>
+    </div>
+
+    <div class="row"> <!-- this div holds the form to edit existing exercises-->
+      <div class="col-md-6" id="editExercises">
+        <h3>holder area for editing exercises</h3>
       </div>
     </div>
     
