added edit function, writes forms, incorrect counting kay variable

--- a/public/members.html
+++ b/public/members.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="row"> <!-- this div holds the form to edit existing exercises-->
-      <div class="col-md-6" id="editExercises">
+      <div class="col-md-6" id="editExercisesForms">
         <h3>holder area for editing exercises</h3>
       </div>
     </div>
