completed ability to edit all exercises in a workout

--- a/public/members.html
+++ b/public/members.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="row"> <!-- this div holds the form to edit existing exercises-->
+    <div class="row"> <!-- this div holds the forms to edit existing exercises-->
       <div class="col-md-6" id="editExercisesForms">
         <h3>holder area for editing exercises</h3>
       </div>
