--- a/public/members.html
+++ b/public/members.html
@@ -22,15 +22,12 @@
     
     <div class="row">
       <div class="col-md-6">
-        <h2>Welcome <span class="member-id"></span>. <span class="member-name"></span></h2>
+        <h2>Welcome <span class="member-name"></span>!</h2>
       </div>
     </div>
 
     <div class="row" id="workoutRow">
-      <div class="col-md-3">
-        <button id="showWorkouts">Show Available Workouts</button>
-      </div>
-      <div class="col-md-9">
+      <div class="col-md-12">
         <h2>Click on a previously entered workout name to workout.</h2>
           <div id="availableWorkouts"></div>
       </div>
