--- a/public/signup.html
+++ b/public/signup.html
@@ -13,6 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
+        <h1>Let's Lift!</h1>
       </div>
     </div>
   </nav>
