--- a/public/members.html
+++ b/public/members.html
@@ -12,8 +12,15 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">Logout User</a>
+      <div class="row" id="navbarNames">
+        <div class="col-xs-3 text-center">
+          <a href="/logout">Logout User</a>
+        </div>
+        <div class="col-xs-6 text-center">
+          <h1 id="pageTitle">Let's Lift!</h1>
+        </div>
+        <div class="col-xs-3 text-center" id="placeDeleteButton">
+        </div>
       </div>
     </div>
   </nav>
