--- a/public/login.html
+++ b/public/login.html
@@ -12,28 +12,28 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="text-center">
           <h1>Let's Lift!</h1>
       </div>
     </div>
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-xs-12">
         <h2>Login Form</h2>
         <form class="login">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <!--<label for="exampleInputEmail1">Email address</label>-->
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <!--<label for="exampleInputPassword1">Password</label>-->
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <p>Or sign up <a href="/">Here</a></p>
       </div>
     </div>
   </div>
