--- a/public/members.html
+++ b/public/members.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <div class="row" id="navbarNames">
         <div class="col-xs-3 text-center">
-          <a href="/logout">Logout User</a>
+          <button><span><a href="/logout">Logout User</a></span></button>
         </div>
         <div class="col-xs-6 text-center">
           <h1 id="pageTitle">Let's Lift!</h1>
@@ -28,36 +28,36 @@
   <div class="container-fluid">
     
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-xs-12">
         <h2>Welcome <span class="member-name"></span>!</h2>
       </div>
     </div>
 
     <div class="row" id="workoutRow">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <h2>Click on a previously entered workout name to workout.</h2>
           <div id="availableWorkouts"></div>
       </div>
     </div>
 
     <div class="row" id="enterRowHeading">
-      <div class="col-md-6">
+      <div class="col-xs-12">
         <h3 id="enterWorkout">Or, click here to enter a new workout</h3>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-6" id="entryForm">
+      <div class="col-xs-12" id="entryForm">
       </div>
     </div>
     
     <div class="row">
-      <div class="col-md-6" id="exerciseEntryForm">
+      <div class="col-xs-12" id="exerciseEntryForm">
       </div>
     </div>
 
     <div class="row"> <!-- this div holds the forms to edit existing exercises-->
-      <div class="col-md-6" id="editExercisesForms">
+      <div class="col-xs-12" id="editExercisesForms">
         <h3>holder area for editing exercises</h3>
       </div>
     </div>
@@ -68,7 +68,7 @@
 
       <div class="row"> <!--This div is only the title of the workout. The span #workout
         is supplied using jQuery in .js-->
-        <div class="col-md-6">
+        <div class="col-xs-12">
           <h3>Title of Current Workout: <span id="workout"></span></h3>
         </div>
       </div>
@@ -81,7 +81,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-xs-12">
       <h1>Spacer row to push up last exercise buttons</h1>
     </div>
   </div>
