--- a/public/signup.html
+++ b/public/signup.html
@@ -12,22 +12,22 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="text-center">
         <h1>Let's Lift!</h1>
       </div>
     </div>
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-xs-12">
         <h2>Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <!--<label for="exampleInputEmail1">Email address</label>-->
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <!--<label for="exampleInputPassword1">Password</label>-->
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p>Or log in <a href="/login">Here</a></p>
       </div>
     </div>
   </div>
