added padding around text, but not happy

--- a/public/members.html
+++ b/public/members.html
@@ -29,20 +29,20 @@
     
     <div class="row">
       <div class="col-xs-12">
-        <h2>Welcome <span class="member-name"></span>!</h2>
+        <h2><span class='namebox'>Welcome <span class="member-name"></span>!</span></h2>
       </div>
     </div>
 
     <div class="row" id="workoutRow">
       <div class="col-xs-12">
-        <h2>Click on a previously entered workout name to workout.</h2>
+        <h2><span class="namebox">Click on a previously entered workout name to workout.</span></h2>
           <div id="availableWorkouts"></div>
       </div>
     </div>
 
     <div class="row" id="enterRowHeading">
       <div class="col-xs-12">
-        <h2 id="enterWorkout">Or, click here to enter a new workout</h2>
+        <h2><span class="namebox" id="enterWorkout">Or, click here to enter a new workout</span></h2>S
       </div>
     </div>
 
@@ -69,7 +69,7 @@
       <div class="row"> <!--This div is only the title of the workout. The span #workout
         is supplied using jQuery in .js-->
         <div class="col-xs-12">
-          <h3>Title of Current Workout: <span id="workout"></span></h3>
+          <h3><span class="namebox">Title of Current Workout: <span id="workout"></span></span></h3>
         </div>
       </div>
 
