--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Login Form</h2>
+        <h2><span class="namebox">Login Form</span></h2>
         <form class="login">
           <div class="form-group">
             <!--<label for="exampleInputEmail1">Email address</label>-->
@@ -33,7 +33,7 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">Here</a></p>
+        <p><span class="namebox">Or sign up <a href="/">Here</a></span></p>
       </div>
     </div>
   </div>
