--- a/public/signup.html
+++ b/public/signup.html
@@ -20,7 +20,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Sign Up Form</h2>
+        <h2><span class="namebox">Sign Up Form</span></h2>
         <form class="signup">
           <div class="form-group">
             <!--<label for="exampleInputEmail1">Email address</label>-->
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">Here</a></p>
+        <p><span class="namebox">Or log in <a href="/login">Here</a></span></p>
       </div>
     </div>
   </div>
