adjusting background, design experiments

--- a/public/members.html
+++ b/public/members.html
@@ -42,7 +42,7 @@
 
     <div class="row" id="enterRowHeading">
       <div class="col-xs-12">
-        <h2><span class="namebox" id="enterWorkout">Or, click here to enter a new workout</span></h2>S
+        <h2><span class="namebox" id="enterWorkout">Or, click here to enter a new workout</span></h2>
       </div>
     </div>
 
