--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid" id="signupBackground">
     <div class="row">
       <div class="col-xs-12">
         <h2><span class="namebox">Login Form</span></h2>
