redirected home page to login page

--- a/public/signup.html
+++ b/public/signup.html
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p><span class="namebox">Or log in <a href="/login">Here</a></span></p>
+        <p><span class="namebox">Or log in <a href="/">Here</a></span></p>
       </div>
     </div>
   </div>
