--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p><span class="namebox">Or sign up <a href="/">Here</a></span></p>
+        <p><span class="namebox">Or sign up <a href="/signup">Here</a></span></p>
       </div>
     </div>
   </div>
