added css to login/signup, borders

--- a/public/login.html
+++ b/public/login.html
@@ -19,8 +19,12 @@
   </nav>
   <div class="container-fluid" id="signupBackground">
     <div class="row">
-      <div class="col-xs-12">
-        <h2><span class="namebox">Login Form</span></h2>
+      <div class="col-sm-3">
+        <h2 class="text-center"><span class="namebox">New Users</span></h2>
+        <h3 class="text-center"><span><a href="/signup">Create an Account</a></span></h3>
+      </div>
+      <div class="col-sm-6">
+        <h2 class="text-center"><span class="namebox">Registered Users</span></h2>
         <form class="login">
           <div class="form-group">
             <!--<label for="exampleInputEmail1">Email address</label>-->
@@ -32,8 +36,6 @@
           </div>
           <button type="submit" class="btn btn-default">Login</button>
         </form>
-        <br />
-        <p><span class="namebox">Or sign up <a href="/signup">Here</a></span></p>
       </div>
     </div>
   </div>
