--- a/public/login.html
+++ b/public/login.html
@@ -19,12 +19,12 @@
   </nav>
   <div class="container-fluid" id="signupBackground">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3" id="signupinLogin">
         <h2 class="text-center"><span class="namebox">New Users</span></h2>
-        <h3 class="text-center"><span><a href="/signup">Create an Account</a></span></h3>
+        <h3 class="text-center" id="signupDiv"><span><a href="/signup">Create an Account</a></span></h3>
       </div>
-      <div class="col-sm-6">
-        <h2 class="text-center"><span class="namebox">Registered Users</span></h2>
+      <div class="col-sm-6" id="loginDiv">
+        <h2 class="text-center" id="logininLogin"><span class="namebox">Registered Users</span></h2>
         <form class="login">
           <div class="form-group">
             <!--<label for="exampleInputEmail1">Email address</label>-->
