--- a/public/signup.html
+++ b/public/signup.html
@@ -19,8 +19,8 @@
   </nav>
   <div class="container-fluid" id="signupBackground">
     <div class="row">
-      <div class="col-xs-12">
-        <h2><span class="namebox">Sign Up Form</span></h2>
+      <div class="col-sm-offset-3 col-sm-6">
+        <h2 class="text-center"><span class="namebox">Sign Up Form</span></h2>
         <form class="signup">
           <div class="form-group">
             <!--<label for="exampleInputEmail1">Email address</label>-->
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p><span><a href="/">Registered Users: Log In Here</a></span></p>
+        <p class="text-center"><span><a href="/">Registered Users: Log In Here</a></span></p>
       </div>
     </div>
   </div>
