made all buttons look alike

--- a/public/login.html
+++ b/public/login.html
@@ -19,9 +19,9 @@
   </nav>
   <div class="container-fluid" id="signupBackground">
     <div class="row">
-      <div class="col-sm-3" id="signupinLogin">
-        <h2 class="text-center"><span class="namebox">New Users</span></h2>
-        <h3 class="text-center" id="signupDiv"><span><a href="/signup">Create an Account</a></span></h3>
+      <div class="col-sm-3 text-center" id="signupinLogin">
+        <h2><span class="namebox">New Users</span></h2>
+        <button id="signupDiv"><span><a href="/signup">Create an Account</a></span></button>
       </div>
       <div class="col-sm-6" id="loginDiv">
         <h2 class="text-center" id="logininLogin"><span class="namebox">Registered Users</span></h2>
