--- a/public/members.html
+++ b/public/members.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="row" id="navbarNames">
@@ -91,7 +92,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
-
+</div>
 </body>
 
 </html>
