--- a/public/signup.html
+++ b/public/signup.html
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p class="text-center"><span><a href="/">Registered Users: Log In Here</a></span></p>
+        <button><span><a href="/">Registered Users: Log In Here</a></span></button>
       </div>
     </div>
   </div>
