added CSS, borders, lines

--- a/public/members.html
+++ b/public/members.html
@@ -68,7 +68,7 @@
 
       <div class="row"> <!--This div is only the title of the workout. The span #workout
         is supplied using jQuery in .js-->
-        <div class="col-xs-12">
+        <div class="col-xs-12" id="nameWorkoutBorder">
           <h3><span class="namebox">Title of Current Workout: <span id="workout"></span></span></h3>
         </div>
       </div>
