--- a/public/signup.html
+++ b/public/signup.html
@@ -34,7 +34,7 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
+          <button type="submit">Sign Up</button>
         </form>
         <br />
         <button><span><a href="/">Registered Users: Log In Here</a></span></button>
