--- a/public/members.html
+++ b/public/members.html
@@ -18,7 +18,7 @@
           <button><span><a href="/logout">Logout User</a></span></button>
         </div>
         
-        <div class="col-xs-4">
+        <div class="col-xs-6 text-center">
           <h1 id="pageTitle">Let's Lift!</h1>
         </div>
         <div class="col-xs-3 text-center" id="placeDeleteButton">
