added a beep every 30 seconds of rest time

--- a/public/members.html
+++ b/public/members.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  
+
+  <audio id="myAudio">
+      <source src="sounds/beep-09.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+  </audio>
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="row" id="navbarNames">
