updating - will full instructions

--- a/public/members.html
+++ b/public/members.html
@@ -61,7 +61,7 @@
             their particular gym, and with whatever exercises they choose. The experienced
             person can build their own workouts, or any person can use any workout they see
             online or in a magazine.</h3><br>
-            <p>...
+            <p>Go through the process and flow of app.
             </p>
           </div>
           <div class="modal-footer">
