--- a/public/signup.html
+++ b/public/signup.html
@@ -18,17 +18,31 @@
     </div>
   </nav>
   <div class="container-fluid" id="signupBackground">
+    <!-- Modal, reminds user to enter both an email address and a password -->
+    <div class="modal fade" id="signupNote" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <h2>Please enter an email address in the form name@something.com, and a 6 digit password.</h2>
+          </div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+      <!-- End of Bootstrap modal code -->
     <div class="row">
       <div class="col-sm-offset-3 col-sm-6">
         <h2 class="text-center"><span class="namebox">Sign Up Form</span></h2>
         <form class="signup">
           <div class="form-group">
-            <!--<label for="exampleInputEmail1">Email address</label>-->
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="email-input" placeholder="example:name@anything.com">
           </div>
           <div class="form-group">
-            <!--<label for="exampleInputPassword1">Password</label>-->
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password-input" placeholder="6 digits">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
