--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-body">
-              <h2>Please enter an email address in the form name@something.com, and a 6 digit password.</h2>
+              <h2>Please enter the email address registered previously, and a 6 digit password.</h2>
             </div>
             <div class="modal-footer">
               <button type="button" data-dismiss="modal">Close</button>
