--- a/public/members.html
+++ b/public/members.html
@@ -58,14 +58,62 @@
             <h2 class="modal-title text-center" id="myModalLabel">Instructions</h2>
           </div>
           <div class="modal-body">
-            <h2>A person can use this app to keep track of sets completed and rest time during a workout.</h2>
-            <h3>Most workout apps have a preset list of exercises and equipment.<br>
-            This app allows a user to build their own workout using the equipment in 
-            their particular gym, and with whatever exercises they choose. The experienced
-            person can build their own workouts, or any person can use any workout they see
-            online or in a magazine.</h3><br>
-            <p>Go through the process and flow of app.
+            <h2>Most workout apps have a preset list of exercises and equipment.<br>
+              The Let's Lift app allows a user to build their own workout using the equipment in 
+              their particular gym, and with whatever exercises they choose. The experienced
+              person can build their own workouts, or a person can build any workout they see
+              online or in a magazine.</h2>
+            <h2>Each individualized workout consists of exercises, the weight used, 
+              number of sets in each exercise, and the number of repetitions (reps) during each set.
+              The user keeps track of sets completed and rest time between sets during a workout.</h2>
+            <h3>The Process:</h3>
+            <p>After logging in with your email address, click on the text: Click here to enter a new workout.
+              Each user is allowed 5 workouts with 10 exercises each. <br>
+              Fill in a name for this new workout and submit it with the Submit button.<br>
+              The user is then shown the form to build the first exercise.<br>
+              Enter the required information in the input fields, and click the Submit button.<br>
+              You're then given a choice of entering more exercises to build out your workout,
+              or Finish entering new exercises.<br>
+              If adding more exercises, repeat the sequence. When you're finished entering new exercises,
+              click Finish.<br>
+              Your new workout name is then put in a list of your available workouts. Each of these has buttons to either
+              Edit or Delete the workout.<br>
+              <h4>Edit</h4>
+              The Edit button shows the user their full workout with input fields that allow them to change
+              the workout. Each field will be labeled with the current information. 
+              This page shows the information for all 10 available exercises, as the user can
+              add more exercises in the empty exercise forms (up to a total of 10) to their workout.<br>
+              IMPORTANT: Make your changes to each exercise, and select the "Submit Changes For This Exercise" button to
+              store the changes for that exercise. 
+              After the "Submit Changes For This Exercise" button is clicked, the input fields then display
+              the changes that you just made.<br>
+              You may make changes to any of your exerices in these forms, <br>
+              but the user MUST then click the Finished Editing button at the  bottom of all the forms.<br>
+              The user is then taken back to the list of available workouts.<br>
+              <h4>Delete</h4>
+              The user can delete a workout by merely clicking the Delete button underneath each individualized
+              workout.<br>
+              <h4>Workout</h4>
+              Click on the name of the workout to start your session.
+              You'll see the title of your current workout, and then a list of each exercise name,
+              the associated number of sets and reps, and at the assigned weight.<br>
+              Next, there's a row of buttons that represent each set. As the user finishes their first set, click the first button.<br>
+              The label of the button, "Reps", will change to the number of assigned reps for that exercise, 
+              and the button changes color.<br>
+              This is also when the clock starts. It is counting your rest time between sets. Every thirty seconds,
+              a beep to will sound to alert the user.  When you're ready, complete your next set, and then click the 
+              next button. That "Reps" label changes to the required number of sets completed, the color changes,
+              and the clock starts over.<br>
+              Work through your entire workout, easily keeping track of which exercise you're on, and checking off
+              each set as you finish them. The beeps during your rest time keep you from resting too much.<br>
+              If you don't complete the required number of sets, clicking a Set button further will count down the label 
+              to however many reps you did complete. If a mistake is made, and you've clicked the button too many
+              times, just click the button repeatedly as it will count down to zero, and start over. then just stop
+              when it displays the correct number of completed reps.<br>
+              Note: the clock continues to count while choosing the correct number of reps completed!
             </p>
+            <h4>When finished with your workout, congratulations! Just hit the Workout Finished button at 
+              the bottom of the workout, and log out.</h4>
           </div>
           <div class="modal-footer">
             <button type="button" data-dismiss="modal">Close</button>
