--- a/public/members.html
+++ b/public/members.html
@@ -12,8 +12,8 @@
 <body>
 
   <audio id="myAudio">
-      <!-- <source src="sounds/4-min.m4a" type="audio/mpeg"> 
-      Your browser does not support the audio element. -->
+      <source src="sounds/resttime(0).mp3" type="audio/mpeg"> 
+      Your browser does not support the audio element.
   </audio>
 
   <nav class="navbar navbar-default">
