FINALLY, got sound files working, set up sep. div

--- a/public/members.html
+++ b/public/members.html
@@ -11,10 +11,12 @@
 
 <body>
 
-  <audio id="myAudio">
-      <source src="sounds/resttime(0).mp3" type="audio/mpeg"> 
-      Your browser does not support the audio element.
-  </audio>
+  <div id="audioCode">
+    <!--<audio id="myAudio">
+          <source src="sounds/resttime(0).mp3" type="audio/mpeg"> 
+          Your browser does not support the audio element.
+    </audio>-->
+  </div>
 
   <nav class="navbar navbar-default">
     <div class="container-fluid">
