--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="text-center">
-          <h1>Let's Lift!</h1>
+          <h1>Weights Work!</h1>
       </div>
     </div>
   </nav>
