--- a/public/members.html
+++ b/public/members.html
@@ -27,7 +27,7 @@
         </div>
         
         <div class="col-xs-4 text-center">
-          <h1 id="pageTitle">Let's Lift!</h1>
+          <h1 id="pageTitle">Weights Work!</h1>
         </div>
         <div class="col-xs-4 text-center">
             <button type="button" data-toggle="modal" data-target="#deleteWarning">
