changed name of app, needed h2 to he change

--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="text-center">
-          <h1>Weights Work!</h1>
+          <h2 id="pageTitle">Weights Work!</h2>
       </div>
     </div>
   </nav>
