--- a/public/members.html
+++ b/public/members.html
@@ -187,6 +187,23 @@
         </div>
       </div>
     </div>
+    <!-- End of Bootstrap modal code -->
+    
+    <!-- Modal, warns user that deleting the user is not recoverable -->
+    <div class="modal fade" id="deleteWorkoutWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <h2>WARNING! Do you want to delete this workout?</h2>
+            <h1>This information cannot be recovered!!</h1>
+          </div>
+          <div class="modal-footer">
+            <div id="placeDeleteWorkoutButton" data-dismiss="modal"></div>
+            <button type="button" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
       <!-- End of Bootstrap modal code -->
 
   <div class="row">
